DevOps/K8S/ingress/Home-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home-container
        image: mayurwagh/home-service:latest 
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
