DevOps/K8S/ingress/Mobile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mobile
  template:
    metadata:
      labels:
        app: mobile   
    spec:
      containers:
      - name: mobile-container
        image: mayurwagh/mobile-service:latest
        ports:
        - containerPort: 80   


---
apiVersion: v1
kind: Service
metadata:
  name: mobile-service
spec:
  selector:
    app: mobile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
