DevOps/K8S/ingress/laptop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laptop-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laptop
  template:
    metadata:
      labels:
        app: laptop
    spec:
      containers:
      - name: laptop-container
        image: mayurwagh/laptop-service:latest
        ports:
        - containerPort: 80   


---
apiVersion: v1
kind: Service
metadata:
  name: laptop-service
spec:
  selector:
    app: laptop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
