DevOps/K8S/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbz-ingress
  labels:
    app: cbz-ingress
spec:
  ingressClassName: nginx
  rules: 
  - host: "cbz.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
  - host: "mobile.cbz.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: mobile-service
            port:
              number: 80
  - host: "laptop.cbz.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: laptop-service
            port:
              number: 80
